<resources>
    <string name="app_name">Crime Reporter</string>
 
    <string name="tvLocation">Welcome!</string>
    <string name="tvLocation2">Your current location is</string>
    <string name="btnRefresh">Get Current Location</string>
    <string name="tvDescription">Here are the crimes reported in your area:</string>
    <string name="btnForm">Report a crime</string>

    <string name="report_a_crime">Report A Crime</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="radiobutton">RadioButton</string>
    <string name="type_of_crime">Type of Crime</string>
    <string name="violent_crime">Violent Crime</string>
    <string name="drug_activity">Drug Activity</string>
    <string name="property_crime">Property Crime</string>
    <string name="traffic_violation">Traffic Violation</string>
    <string name="description_of_crime">Description of Crime</string>
    <string name="time_of_crime">Time of Crime</string>
    <string name="resolved">Resolved</string>
    <string name="submit">Submit</string>
 
</resources>